--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,4 +1,12 @@
+#
+# Copyright (c) 2021 Sung Ho Park and CSOS
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+
 cmake_minimum_required(VERSION 3.3)
+
+###############################################################################
 
 include("${CMAKE_CURRENT_LIST_DIR}/../../ubinos/config/common.cmake")
 
@@ -13,4 +21,6 @@ project_add_library(nrf5sdk_wrapper)
 project_add_library(nrf5sdk_extension)
 project_add_library(ArduinoCore-API_wrapper)
 project_end()
+
+###############################################################################
 
